<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".HeatingActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical"
        android:paddingBottom="15dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/thermostat" >
                <ImageView
                    android:id="@+id/back_arrow"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/left_arrow"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewCurrentTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_weight="1.5"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:text="@string/current_temperature" />

            <TextView
                android:id="@+id/textTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_weight="0.5"
                android:layout_marginStart="15dp"
                android:layout_marginTop="18dp"
                android:textColor="@color/Title"
                android:textStyle="bold"
                android:text="@string/defaultTemperature" />

            <ImageView
                android:id="@+id/syncTemperature"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="0.5"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/sync" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewAdjustTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_weight="0.2"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:text="@string/adjust_temperature" />

            <SeekBar
                android:id="@+id/seekBarAdjustTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:layout_weight="2"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewAC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="@string/ac"
                android:textSize="20sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchAC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginEnd="68dp"
                android:textOff="@string/off"
                android:textOn="@string/on"
                android:thumb="@drawable/thumb"
                android:layout_marginTop="10dp"
                app:showText="true"
                app:track="@drawable/track" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewHeater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="@string/heater"
                android:textSize="20sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchHeater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginEnd="68dp"
                android:textOff="@string/off"
                android:textOn="@string/on"
                android:thumb="@drawable/thumb"
                android:layout_marginTop="10dp"
                app:showText="true"
                app:track="@drawable/track" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>