<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".DoorAndWindow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical"
        android:paddingBottom="15dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/imageDoorWindow"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/doorwindow" >
                <ImageView
                    android:id="@+id/back_arrow_door_window"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/left_arrow"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewWindow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="@string/window"
                android:textSize="20sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchWindow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginEnd="68dp"
                android:textOff="@string/off"
                android:textOn="@string/on"
                android:thumb="@drawable/thumb"
                android:layout_marginTop="10dp"
                app:showText="true"
                app:track="@drawable/track" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewDoor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="@string/door"
                android:textSize="20sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchDoor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginEnd="68dp"
                android:textOff="@string/off"
                android:textOn="@string/on"
                android:thumb="@drawable/thumb"
                android:layout_marginTop="10dp"
                app:showText="true"
                app:track="@drawable/track" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>