<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bathroom_plugins">
    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/left_arrow" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_margin="20dp"
        android:gravity="bottom"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/dryer"
                android:textColor="@color/plugins"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switchDryerOn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:scrollbarSize="30dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/washer"
                android:textColor="@color/plugins"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switchWasherOn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:scrollbarSize="30dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/AromatherapyDiffuser"
            android:textColor="@color/plugins"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switchAromatherapyDiffuserOn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:scrollbarSize="30dp" />
    </LinearLayout>
    </LinearLayout>


</LinearLayout>