<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/fragment_bathroom"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical"
        android:paddingBottom="15dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="265dp"
                android:background="@drawable/bathroom_background">

                <ImageView
                    android:id="@+id/back_arrow"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/left_arrow" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image">


            <TextView
                android:id="@+id/bathroomTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bathroom"
                android:textColor="@color/Title"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="63dp"
                android:layout_height="41dp"
                android:src="@drawable/bathroom_icon"
                app:layout_constraintStart_toEndOf="@+id/textView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="match_parent"
            android:background="@color/list"
            android:layout_gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Title"
            android:padding="15dp"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@drawable/light"
                    android:id="@+id/light"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/light"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@drawable/plugs"
                    android:id="@+id/devices"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/devices"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@drawable/heater"
                    android:id="@+id/heating"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/heating"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@drawable/windows_bathroom"
                    android:id="@+id/windowsAndDoors"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/windows_and_doors"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@drawable/shades_bathroom"
                    android:id="@+id/shades"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/shades"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </LinearLayout>
</ScrollView>
